# Pcsx2-Rich-Presence-for-Discord

./: .gitignore  CHANGELOG.md  Launch-PCSX2.bat  README.md  build_release.ps1  config.yaml  launcher.py  main.py  main_unified.py  pyproject.toml  requirements.txt  setup_wizard.py  tray_icon.py
detection/: __init__.py  detector.py  game_state_extractor.py  log_parser.py  process_monitor.py  window_title.py
discord_rpc/: __init__.py  client.py  presence.py  unified_presence.py
metadata/: __init__.py  cache.py  cover_art.py  game_id.py  gametdb.py  igdb.py  metadata_manager.py  screenscraper.py
tests/: test_detection.py  test_metadata_cache.py  test_presence_builder.py
utils/: __init__.py  config.py  logger.py  retry.py  storage.py
